--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,14 @@
     <repositories>
         <repository>
             <id>repository.jboss.org</id>
-            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
         </repository>
         <repository>
             <id>gson</id>
-            <url>http://google-gson.googlecode.com/svn/mavenrepo</url>
+            <url>https://google-gson.googlecode.com/svn/mavenrepo</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
